--- a/friends/public/index.html
+++ b/friends/public/index.html
@@ -9,6 +9,9 @@
       name="description"
       content="Web site created using create-react-app"
     />
+    
+    <script src="https://kit.fontawesome.com/fa7183b379.js" crossorigin="anonymous"></script>
+    
     <link rel="apple-touch-icon" href="logo192.png" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
